# tech-tickets

./: .env  .gitignore  Cargo.toml  LICENSE  config.json  tickets
collector/: .env  Cargo.toml
collector/.sqlx/: query-0df55f238c73ca24396bf451148b22a388681435fa589e45d371d1e7790f0c2d.json  query-32a76ab69b6bda6c60dc40f24a7a8c9e450cddeda7e3750c20cfcaad36e379b9.json  query-3a0f72b207759ae7b333a4e40c0b102b12bf0c3cc71228c2bd364b7cf618242c.json  query-469dc01301a7224d486abbe3b0724d4534002a0c10f48c7a22dae6cb90a05e14.json  query-5fbea27eccc782d26eb2d4720cbccb843a1237b272dc0398fc0869cda88325c6.json  query-9146d322675497984b3b0256973f9b5b8729d750f9b6765be2089797ddd34e8e.json  query-973b039c1b4d33fd5d7c6a5f3dcfffdbe41e4cd2665e5a403b643d31531005b7.json  query-cbb1dac6a2ee76b088d6fad5520cfc5ed5b75f476605ce0ba62f0be89e8dfd88.json  query-d54c645b4362c80fdaf01ca2f3748ff28feb71aaa260167ebd2cc5637cdda2e8.json  query-d81c4df85bdb23e10c18f63c298786899a271a26cd08e2c3e2e7e75f53724c55.json  query-edccfb920dc0d304d08268f377cd71747d9dd3b3b08df36601721cbc9d78fbdd.json  query-f0fcf4a0ebf62df4c623739941a7ac4da9d15dcaa751fdac1a10121b4787cc9e.json
collector/migrations/: 20240306024801_prepare_tables.sql
collector/src/: axum_ext.rs  consumer.rs  main.rs  staff.rs  state.rs
gateways/discord/: .env  Cargo.toml
gateways/discord/.sqlx/: query-23fd3eab9a1273fb3db4a55ed34fe9232966461bad96220012de61221fdf7377.json
gateways/discord/migrations/: 20240306032438_prepare_tables.sql
gateways/discord/src/: app.rs  cache.rs  channels.rs  commands.rs  events.rs  guilds.rs  interactions.rs  main.rs  modals.rs  realtime.rs  shared_state.rs  state.rs
gateways/discord/src/cache/: channels.rs  guilds.rs  roles.rs  users.rs
gateways/discord/src/commands/: bootstrap.rs  promote_staff.rs
gateways/discord/src/commands/management/: bind_guild.rs  bootstrap.rs  create_app.rs  mod.rs  promote_staff.rs
gateways/discord/src/realtime/: app_changes.rs  ticket_events.rs
lib/auth/: Cargo.toml
lib/auth/src/: jwt.rs  lib.rs
lib/dry/: Cargo.toml
lib/dry/src/: config.rs  database.rs  lib.rs
lib/errors/: Cargo.toml
lib/errors/src/: lib.rs
lib/events/: Cargo.toml
lib/events/src/: adapter.rs  lib.rs
lib/sdk/: Cargo.toml
lib/sdk/src/: client.rs  lib.rs  routes.rs
scripts/: gen_keys.sh  reset_db.sh  run_collector.sh  run_discord_bot.sh  start_local_db.sh
socket.io/client/: Cargo.toml
socket.io/client/src/: lib.rs
socket.io/emitter/: Cargo.toml
socket.io/emitter/src/: adapter.rs
socket.io/emitter/src/adapter/: redis.rs
socket.io/server/: Cargo.toml
socket.io/server/src/: adapter.rs  lib.rs  main.rs  websocket.rs
socket.io/server/src/adapter/: redis.rs
