[package]
name = "socketio-emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace Dependencies
errors.workspace = true
events.workspace = true

# UUID
uuid.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true

# Adapter Types
redis = { workspace = true, optional = true }

[features]
default = ["redis_adapter"]

redis_adapter = ["redis", "errors/redis"]
